# kis-buildsys

task-for-3/: CMakeLists.txt  CMakeLists.txt.in
task-for-3/A/: funcs.json  preparing.py
task-for-3/B/: CMakeLists.txt  lib.cpp  lib.h
task-for-3/C/: main.cpp  main.h  main_test.cpp
task-for-5-1/: README.md
task-for-5-2/TechProgSimpleLibrary/: CMakeLists.txt  README.md  orig_repo
